# bial-cd-active

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  vercel.json
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_01_0001_enable_extensions.py
backend/src/: config.py  main.py
backend/src/api/: deps.py
backend/src/api/v1/: router.py
backend/src/api/v1/health/: router.py
backend/src/core/: errors.py
backend/src/db/: base.py  mixins.py  session.py
backend/src/db/models/: __init__.py
backend/src/services/storage/: __init__.py  accessor.py  azure_backend.py  base.py  config.py  constants.py  errors.py  factory.py  keys.py  s3_backend.py
backend/tests/: conftest.py  test_config.py  test_database.py  test_errors.py
backend/tests/api/v1/health/: test_health.py
backend/tests/services/storage/: conftest.py  test_azure_backend.py  test_factory.py  test_integration.py  test_keys.py  test_s3_backend.py
ops/gotenberg/: Dockerfile  README.md
portal/: .dockerignore  .env.e2e.example  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.appservice  docker-entrypoint.sh  index.html  package-lock.json  package.json  playwright.config.ts  server.js  tailwind.config.js  vite.config.js  vitest.config.js
portal/api/: claude.js
portal/e2e/: auth.setup.ts  deck-attachment.spec.ts  deck-rejections.spec.ts  global-setup.ts  login.spec.ts
portal/e2e/fixtures/: sample.pptx
portal/scripts/: add-user.js  backfill-search-docs.js  e2e-container.sh  e2e-setup.sh  ensure-indexes.js  export-cosmos-logs.js  probe-data-search.js  qa-attachments.sh  seed-bial-users.js  seed-users.js  smoke-login.js
portal/server/: anthropic-files.js  app-context.js  app-data.js  app-files-repo.js  app-files.js  app-parse.js  app-registry-repo.js  app-validators.js  attachments-repo.js  attachments.js  audit-repo.js  bial-data-client.js  conversations-repo.js  conversations.js  cosmos.js  data-records-repo.js  deck-config.js  deck-convert.js  deploy.js  ensure-indexes.js  feedback-repo.js  feedback.js  file-parse-runner.js  file-parse.js  file-parse.worker.js  jsx-compile.js  limits.js  message-content.js  messages-repo.js  mongo-retry.js  object-store.js  office-extract.js  runner.js  usage-repo.js  users-repo.js  util-validate.js  zip-safety.js
portal/server/__tests__/: admin-apps-routes.test.js  admin-routes.test.js  anthropic-files.test.js  app-context.test.js  app-data-routes.test.js  app-files-repo.test.js  app-files-routes.test.js  app-parse-routes.test.js  app-registry-repo.test.js  attachments-repo.test.js  attachments-routes.test.js  audit-repo.test.js  auth-routes.test.js  bial-data-client.test.js  conversations-repo.test.js  conversations-routes.test.js  data-records-repo.test.js  deck-attachments-routes.test.js  fakeCosmos.js  (+38 more)
portal/src/: App.jsx
(+80 files in other folders)
